--- a/style.css
+++ b/style.css
@@ -279,6 +279,7 @@ footer {
         border: none;
         pointer-events: auto;
         touch-action: auto;
+        pointer: course;
         visibility: visible;
         height: 50px; 
         width: 100px;
