--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
 .img-btn {
     background-color: rgba(0, 0, 0, 0);
     border: none;
-    /*pointer-events: none;*/
+    pointer-events: none;
     visibility: hidden;
     width: 0;
     height: 0;
@@ -277,8 +277,8 @@ footer {
     .img-btn {
         background-color: rgba(0, 0, 0, 0);
         border: none;
-        /*pointer-events: auto;
-        pointer: course;*/
+        pointer-events: auto;
+        pointer: course;
         visibility: visible;
         height: 50px; 
         width: 100px;
@@ -314,7 +314,7 @@ footer {
         left: 70%;
         width: 100%;
         visibility: hidden;
-        overflow: hidden;
+        overflow: visible;
     }
     
     .link-content li {
