--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     display: flex;
     align-items: flex-end;
 }
-*/   
+   
 
 .link-content {
     display:flex;
@@ -67,12 +67,12 @@ body {
     text-decoration: none;
     letter-spacing: 3px;
 }
-/*
+
 .links a {
     color: white;
     text-decoration: none;
 }
-*/
+
 .resume {
     animation: fadeInAnimation ease 1s;
     animation-delay: 3s;
@@ -110,7 +110,15 @@ body {
     width: 0;
     height: 0;
 }
+*/
 
+.image-icon {
+    width: 50px;
+}
+
+.btn-secondary {
+    background-color: #2B3033;
+}
 .photo-base {
     display: flex;
     align-items: center;
